# IEEE_SEC_HW_Competition

./: .gitignore  .gitmodules  README.md  SingleMotorTestbench.ino  docker-compose.yaml  env_setup.sh  gitignore.txt:Zone.Identifier  rosstart.cpp  startup
ROSArduinoBridge/: ROSArduinoBridge.ino  motor_driver.h
SingleMotorTestbench/: SingleMotorTestbench.ino
dev_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
docker/: Dockerfile  bashrc  downloadDependencies.sh  entrypoint.sh
opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  buildFile  cmake_install.cmake  photo.cpp  video.cpp
opencv_ws/install/: local_setup.sh  setup.sh
opencv_ws/src/image_Subscriber/: CMakeLists.txt
opencv_ws/src/image_Subscriber/src/: image_subscriber.cpp
opencv_ws/src/image_publisher/: CMakeLists.txt
opencv_ws/src/image_publisher/src/: image_publisher.cpp
opencv_ws/src/my_opencv_demo/: CMakeLists.txt  package.xml
sec_test_dev_eloquent_ws/src/sec_description/rviz/: urdf_config.rviz
sec_test_dev_humble_ws/install/: local_setup.sh  setup.sh
sec_test_dev_humble_ws/log/: latest_build
sec_test_dev_humble_ws/src/configs/: imu-params.yaml
sec_test_dev_humble_ws/src/install/: local_setup.sh  setup.sh
sec_test_dev_humble_ws/src/log/: latest_build
sec_test_dev_humble_ws/src/sec_description/: CMakeLists.txt  package.xml
sec_test_dev_humble_ws/src/sec_description/config/: config.rviz  controllers.yaml  ekf.yaml
sec_test_dev_humble_ws/src/sec_description/description/: camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro  sec_description.urdf.xacro
sec_test_dev_humble_ws/src/sec_description/launch/: display.launch.py  gazebo_world.launch.py  launch_sim.launch.py  odometry_sim.launch.py  rsp.launch.py  rviz2.launch.py
sec_test_dev_humble_ws/src/sec_description/src/: tf_subscriber.cpp
sec_test_dev_humble_ws/src/sec_description/worlds/: comp_course.world  obstacles.world
sec_test_dev_humble_ws/worlds/: world_1
sec_test_dev_ws/install/: local_setup.sh  setup.sh
sec_test_dev_ws/log/: latest_build
sec_test_dev_ws/src/sec_description/: CMakeLists.txt  package.xml
sec_test_dev_ws/src/sec_description/description/: gazebo_control.xacro  inertial_macros.xacro  robot_core.xacro  sec_description.urdf.xacro
sec_test_dev_ws/src/sec_description/launch/: display.launch.py
serial_ws/install/: local_setup.sh  setup.sh
serial_ws/src/arduino_communication/: CMakeLists.txt
serial_ws/src/arduino_communication/src/: arduino_communication.cpp
src/cpp_srvcli/src/: add_two_ints_client.cpp
src_ws/: comp_map.pgm  comp_map.yaml  full_bringup  full_ros2_start  green_detector.py  hw_full_bringup  hw_full_bringup.cpp  rosstart.cpp  sw_full_bringup  sw_full_bringup.cpp
src_ws/full_bringup/: hw_full_bringup  hw_full_bringup.cpp  sw_full_bringup  sw_full_bringup.cpp
src_ws/green_detector/: CMakeLists.txt  green_detector.cpp  tuning_code.cpp
src_ws/src/ball_tracker/: README.md  setup.py
src_ws/src/ball_tracker/ball_tracker/: detect_ball.py  detect_ball_3d.py  follow_ball.py  image_publisher.py  process_image.py
src_ws/src/ball_tracker/config/: ball_tracker_params_robot.yaml
src_ws/src/ball_tracker/launch/: ball_tracker.launch.py
src_ws/src/diffdrive_arduino/: TeleopErrors-SetupCommands.txt
src_ws/src/diffdrive_arduino/hardware/: diffbot_system.cpp
src_ws/src/diffdrive_arduino/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src_ws/src/follow_waypoints/: package.xml  setup.py
src_ws/src/sec_description/: CMakeLists.txt  package.xml
src_ws/src/secbot_bring_up/: CMakeLists.txt  README.md  package.xml
src_ws/src/secbot_bring_up/launch/: combine.launch.py  hardware.launch.py  nonav_control.launch.py
src_ws/src/secbot_bring_up/src/: gazebo_bringup.cpp  hw_launch_bringup.cpp  hw_nav_bringup.cpp  hw_waypoint_bringup.cpp  nav_bringup.cpp  node_checker.cpp  secbot_bring_up.cpp  sw_launch_bringup.cpp  sw_nav_bringup.cpp  sw_waypoint_bringup.cpp  waypoint_bringup.cpp
src_ws/src/secbot_description/: CMakeLists.txt  README.md  package.xml
src_ws/src/secbot_navigation/: CMakeLists.txt  README.md  package.xml
src_ws/src/secbot_navigation/config/: amcl_config.rviz  ekf.yaml  ekf_hw.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src_ws/src/secbot_navigation/launch/: amcl.launch.py  ball_tracker_launch.py  bringup_launch.py  complete.launch.py  complete_launch.py  full_amcl.launch.py  localization_launch.py  navigation.launch.py  navigation_launch.py  odometry_sim.launch.py  rviz2.launch.py  slam_mapping.launch.py  waypoint_launch.py
src_ws/src/secbot_navigation/maps/: comp_map_save.pgm  comp_map_save.yaml  comp_map_serial.data  no_ramp_save.pgm  no_ramp_save.yaml  no_ramp_serial.data  obstacles_map_save.pgm  obstacles_map_save.yaml  obstacles_map_serial.data
src_ws/src/secbot_navigation/scripts/: follow_waypoints.py
src_ws/src/secbot_navigation/src/: navigation.cpp  secbot_navigation.cpp  waypoint_index_client.cpp  waypoint_index_server.cpp
src_ws/src/secbot_simulation/: CMakeLists.txt  README.md  package.xml
src_ws/src/topic_tools/: CMakeLists.txt
src_ws/src/topic_tools/launch/: relay.launch
src_ws/src/topic_tools/src/: tool_base_node.cpp:Zone.Identifier
src_ws/src/waypoint_action_follower/: CMakeLists.txt  README.md  package.xml  plugins.xml
src_ws/src/waypoint_action_follower/include/waypoint_action_follower/plugins/: input_at_waypoint.hpp  photo_at_waypoint.hpp  service_at_waypoint.hpp  task_at_waypoint.hpp  turn_robot_at_waypoint.hpp  wait_at_waypoint.hpp
src_ws/src/waypoint_action_follower/plugins/: input_at_waypoint.cpp  photo_at_waypoint.cpp  service_at_waypoint.cpp  task_at_waypoint.cpp  track_ball_at_waypoint.cpp  turn_robot_at_waypoint.cpp  wait_at_waypoint.cpp
src_ws/src/waypoint_action_follower/src/: main.cpp  waypoint_follower.cpp  waypoint_index_client.cpp
src_ws/src/waypoint_action_follower/test/: CMakeLists.txt  test_dynamic_parameters.cpp  test_task_executors.cpp
src_ws/src/waypoint_interfaces/: CMakeLists.txt  package.xml
(+166 files in other folders)
